Remove em dashes from all pages

--- a/index.html
+++ b/index.html
@@ -416,9 +416,9 @@
 
 <!-- HERO -->
 <div class="hero">
-    <span class="hero-badge">📘 Free Guide — 2026 Edition</span>
+    <span class="hero-badge">📘 Free Guide - 2026 Edition</span>
     <h1>The Ultimate <em>B2B Lead Generation</em> Playbook</h1>
-    <p>Proven strategies used by 10,000+ sales teams to find, qualify, and close high-value business leads. No fluff — just actionable steps.</p>
+    <p>Proven strategies used by 10,000+ sales teams to find, qualify, and close high-value business leads. No fluff - just actionable steps.</p>
     <div class="hero-stats">
         <div class="stat">
             <div class="stat-number">30M+</div>
@@ -459,7 +459,7 @@
         <div class="guide-card">
             <div class="card-icon">🔍</div>
             <h3>2. Data-Driven Prospecting</h3>
-            <p>Use <a href="https://rangelead.com" style="color:var(--primary)">business intelligence platforms</a> to find companies that match your ICP — with verified contact data.</p>
+            <p>Use <a href="https://rangelead.com" style="color:var(--primary)">business intelligence platforms</a> to find companies that match your ICP - with verified contact data.</p>
             <ul>
                 <li>B2B data providers compared</li>
                 <li>Enrichment workflows</li>
@@ -499,7 +499,7 @@
         <div class="guide-card">
             <div class="card-icon">💡</div>
             <h3>6. Hidden Opportunities Most Miss</h3>
-            <p>Find businesses with <a href="https://rangelead.com" style="color:var(--primary)">problem indicators</a> — missing websites, low ratings, no social presence — and offer solutions.</p>
+            <p>Find businesses with <a href="https://rangelead.com" style="color:var(--primary)">problem indicators</a> - missing websites, low ratings, no social presence - and offer solutions.</p>
             <ul>
                 <li>Problem indicator targeting</li>
                 <li>Underserved market discovery</li>
@@ -566,7 +566,7 @@
                 <input type="text" name="honeypot" class="hp" tabindex="-1" autocomplete="off">
                 
                 <button type="submit" class="submit-btn" id="submitBtn">
-                    📬 Send Me the Playbook — Free
+                    📬 Send Me the Playbook - Free
                 </button>
                 <p class="form-note">No spam. Unsubscribe anytime. By submitting you agree to our privacy policy.</p>
             </form>
@@ -584,7 +584,7 @@
 <!-- FOOTER -->
 <footer>
     <p>
-        Made with ❤️ by <a href="https://rangelead.com">RangeLead</a> — B2B Lead Intelligence Platform<br>
+        Made with ❤️ by <a href="https://rangelead.com">RangeLead</a> - B2B Lead Intelligence Platform<br>
         Access 30M+ verified US businesses across 500+ categories in all 50 states.
     </p>
     <p style="margin-top:1rem">
@@ -632,14 +632,14 @@ document.getElementById('leadForm').addEventListener('submit', async function(e)
             form.style.display = 'none';
             document.getElementById('formSuccess').style.display = 'block';
         } else {
-            btn.textContent = 'Something went wrong — try again';
+            btn.textContent = 'Something went wrong - try again';
             btn.disabled = false;
-            setTimeout(() => { btn.textContent = '📬 Send Me the Playbook — Free'; }, 3000);
+            setTimeout(() => { btn.textContent = '📬 Send Me the Playbook - Free'; }, 3000);
         }
     } catch (err) {
-        btn.textContent = 'Network error — try again';
+        btn.textContent = 'Network error - try again';
         btn.disabled = false;
-        setTimeout(() => { btn.textContent = '📬 Send Me the Playbook — Free'; }, 3000);
+        setTimeout(() => { btn.textContent = '📬 Send Me the Playbook - Free'; }, 3000);
     }
 });
 </script>
