--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
         /* HIGHLIGHT BANNER */
         .highlight{background:linear-gradient(135deg,var(--dark),#1e3a5f);color:white;padding:5rem 2rem}
-        .highlight .container-sm{display:grid;grid-template-columns:1fr 1fr;gap:4rem;align-items:center}
+        .highlight .container-sm{display:grid;grid-template-columns:1fr 1fr;gap:3rem;align-items:start}
         .highlight h2{font-size:2rem;font-weight:800;margin-bottom:1rem}
         .highlight p{color:rgba(255,255,255,.8);font-size:1.05rem;line-height:1.8;margin-bottom:1rem}
         .highlight ul{padding-left:1.25rem;color:rgba(255,255,255,.75);margin-bottom:1.5rem}
         .highlight li{margin-bottom:.5rem}
         .highlight a{color:#93c5fd}
-        .highlight-btn{display:inline-block;background:var(--accent);color:var(--dark);padding:.75rem 2rem;border-radius:10px;font-weight:700;text-decoration:none;font-size:1rem}
+        .highlight-btn{display:inline-block;background:var(--accent);color:var(--dark);padding:.85rem 2.5rem;border-radius:10px;font-weight:800;text-decoration:none;font-size:1.1rem;letter-spacing:.3px;white-space:nowrap}
         .highlight-btn:hover{text-decoration:none;background:#d97706}
 
         /* TOOLS GRID */
