Add cross-link to US Business Data Report page

--- a/index.html
+++ b/index.html
@@ -422,6 +422,19 @@
     </div>
 </div>
 
+<!-- CROSS-LINK -->
+<div class="full" style="background:var(--gray-100);padding:4rem 2rem">
+    <div class="container" style="max-width:900px">
+        <a href="https://rangelead.github.io/us-business-data-report/" style="background:linear-gradient(135deg,#f5f3ff,#ede9fe);border:2px solid #c4b5fd;border-radius:16px;padding:2.5rem;display:flex;align-items:center;gap:2rem;text-decoration:none;transition:border-color .2s">
+            <span style="font-size:3rem">📊</span>
+            <span>
+                <span style="font-size:1.1rem;font-weight:700;color:var(--dark);display:block;margin-bottom:.35rem">New: 2026 US Small Business Digital Presence Report</span>
+                <span style="font-size:.9rem;color:var(--gray-500)">We analyzed 30M businesses across 50 states. 28% have no website. 19% have ratings below 3.5. See the full data breakdown.</span>
+            </span>
+        </a>
+    </div>
+</div>
+
 <!-- CTA FORM -->
 <div class="full" style="padding-bottom:5rem">
     <div class="cta-section" id="get-guide">
